--- a/less/flex.less
+++ b/less/flex.less
@@ -77,6 +77,7 @@ body {
 #left-nav {
 	overflow: auto;
 	max-height: 100vh;
+  	-webkit-flex: 0 0 220px;
 }
 
 #presets .searchbox {
@@ -205,6 +206,7 @@ body {
 .resize-handle {
 	background-color: #444;
 	width: 5px;
+  -webkit-flex: 0 0 5px;
 }
 
 .mid-pane-handle {
@@ -214,4 +216,11 @@ body {
 .resize-handle:hover {
 	cursor: pointer;
 	background-color: @gray-light;
+}
+
+::-webkit-scrollbar {
+  background: rgba(32,32,32,0.5);
+}
+::-webkit-scrollbar-thumb {
+	background: rgba(96,96,96,0.3);
 }
